Adds esl_avx512_hmax_epi8(), plus unit tests for AVX512 hmax* functions.

--- a/Makefile.in
+++ b/Makefile.in
@@ -320,10 +320,10 @@ UTESTS =\
 
 SSE_UTESTS     = esl_sse_utest
 AVX_UTESTS     = esl_avx_utest
-AVX512_UTESTS  = 
+AVX512_UTESTS  = esl_avx512_utest
 NEON_UTESTS    = esl_neon_utest
 VMX_UTESTS     = esl_vmx_utest
-ALL_UTESTS     = ${UTESTS} ${SSE_UTESTS} ${AVX_UTESTS} ${NEON_UTESTS} ${VMX_UTESTS}
+ALL_UTESTS     = ${UTESTS} ${SSE_UTESTS} ${AVX_UTESTS} ${AVX512_UTESTS} ${NEON_UTESTS} ${VMX_UTESTS}
 
 ${SSE_UTESTS}:     SIMD_CFLAGS= ${SSE_CFLAGS}
 ${AVX_UTESTS}:     SIMD_CFLAGS= ${AVX_CFLAGS}
