--- a/Makefile.in
+++ b/Makefile.in
@@ -82,12 +82,13 @@ INSTALL  = @INSTALL@
 QUIET_SUBDIR0 = +${MAKE} -C #space separator after -c
 QUIET_SUBDIR1 =
 ifndef V
+	QUIET         = @
 	QUIET_CC      = @echo '    ' CC $@;
 	QUIET_GEN     = @echo '    ' GEN $@;
 	QUIET_AR      = @echo '    ' AR $@;
 	QUIET_SUBDIR0 = +@subdir=
 	QUIET_SUBDIR1 = ; echo '    ' SUBDIR  $$subdir; \
-		        ${MAKE} -C $$subdir
+		        ${MAKE} -s -C $$subdir
 endif
 
 
@@ -620,17 +621,20 @@ ifneq (,$(wildcard ./documentation/.))
 endif
 	${QUIET_SUBDIR0}testsuite     ${QUIET_SUBDIR1} clean
 	${QUIET_SUBDIR0}miniapps      ${QUIET_SUBDIR1} clean
-	-rm -f ${ALL_OBJS} libeasel.a
-	-rm -f ${ALL_UTESTS} ${ALL_BENCHMARKS} ${ALL_EXAMPLES} ${ALL_EXPERIMENTS}
-	-rm -f *~ TAGS
-	-rm -f *.gcno *.gcda *.gcov
-	-rm -f cscope.out
-	-rm -f core.[0-9]*
-	-rm -f esltmp??????
-	-rm -f config.log config.status
-	for prog in ${ALL_UTESTS} ${ALL_BENCHMARKS} ${ALL_EXAMPLES} ${ALL_EXPERIMENTS}; do\
+	${QUIET}-rm -f ${ALL_OBJS} libeasel.a
+	${QUIET}-rm -f ${ALL_UTESTS} ${ALL_BENCHMARKS} ${ALL_EXAMPLES} ${ALL_EXPERIMENTS}
+	${QUIET}-rm -f *~ TAGS
+	${QUIET}-rm -f *.gcno *.gcda *.gcov
+	${QUIET}-rm -f cscope.out
+	${QUIET}-rm -f core.[0-9]*
+	${QUIET}-rm -f esltmp??????
+	${QUIET}-rm -f config.log config.status
+	${QUIET}for prog in ${ALL_UTESTS} ${ALL_BENCHMARKS} ${ALL_EXAMPLES} ${ALL_EXPERIMENTS}; do\
 	   if test -d $$prog.dSYM; then rm -rf $$prog.dSYM; fi;\
 	done
+ifndef V
+	@echo '     ' CLEAN easel
+endif
 
 
 distclean: clean
@@ -640,13 +644,13 @@ ifneq (,$(wildcard ./documentation/.))
 endif
 	${QUIET_SUBDIR0}testsuite     ${QUIET_SUBDIR1} distclean
 	${QUIET_SUBDIR0}miniapps      ${QUIET_SUBDIR1} distclean
-	-rm esl_config.h decoy_config.h
-	-rm -rf autom4te.cache
-	-rm LICENSE.sh
-	-rm Makefile
+	${QUIET}-rm -f esl_config.h decoy_config.h
+	${QUIET}-rm -rf autom4te.cache
+	${QUIET}-rm -f LICENSE.sh
+	${QUIET}-rm -f Makefile
 
 gitclean:  distclean
-	-rm configure
+	${QUIET}-rm -f configure
 
 
 # 'make REPOSITORY=... dist' : create a new distribution tarball
