--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -76,7 +76,7 @@ ifndef V
 	QUIET_AR      = @echo '    ' AR $@;
 	QUIET_SUBDIR0 = +@subdir=
 	QUIET_SUBDIR1 = ; echo '    ' SUBDIR  $$subdir; \
-		        ${MAKE} -C $$subdir
+		        ${MAKE} -s -C $$subdir
 endif
 
 
@@ -108,10 +108,13 @@ clean:
 	for prog in ${PROGS}; do\
 	   if test -d $$prog.dSYM; then rm -rf $$prog.dSYM; fi;\
 	done
+ifndef V
+	@echo '     ' CLEAN miniapps
+endif
 
 
 distclean: clean
 	-rm -f ${PROGS}
-	-rm Makefile
+	-rm -f Makefile
 
 
