--- a/miniapps/esl-mask.man.in
+++ b/miniapps/esl-mask.man.in
@@ -1,4 +1,4 @@
-.TH "esl-mask" 1 "@EASEL_DATE@" "Easel @PACKAGE_VERSION@" "Easel miniapps"
+.TH "esl-mask" 1 "@EASEL_DATE@" "Easel @EASELVERSION@" "Easel Manual"
 
 .SH NAME
 .TP 
@@ -148,15 +148,27 @@ the file format.
 
 
 
+
+
+
+.SH SEE ALSO
+
+.nf
+@EASEL_URL@
+.fi
+
+.SH COPYRIGHT
+
+.nf 
+@EASEL_COPYRIGHT@
+@EASEL_LICENSE@
+.fi 
+
 .SH AUTHOR
 
-Easel and its documentation are @EASEL_COPYRIGHT@.
-@EASEL_LICENSE@.
-See COPYING in the source code distribution for more details.
-The Easel home page is: @EASEL_URL@
-
-
-
+.nf
+http://eddylab.org
+.fi
 
 
 
