--- a/miniapps/esl-ssdraw.man.in
+++ b/miniapps/esl-ssdraw.man.in
@@ -1,4 +1,4 @@
-.TH "esl-ssdraw" 1  "@RELEASEDATE@" "@PACKAGE@ @RELEASE@" "@PACKAGE@ Manual"
+.TH "esl-ssdraw" 1  "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
 
 .SH NAME
 .TP
@@ -823,8 +823,24 @@ will be ignored and the information from
 will supersede it. Inserts are columns that are gaps in the reference
 (#=GC RF) annotation. 
 
+
+
+
+.SH SEE ALSO
+
+.nf
+@EASEL_URL@
+.fi
+
+.SH COPYRIGHT
+
+.nf 
+@EASEL_COPYRIGHT@
+@EASEL_LICENSE@
+.fi 
+
 .SH AUTHOR
-Easel and its documentation are @EASEL_COPYRIGHT@.
-@EASEL_LICENSE@.
-See COPYING in the source code distribution for more details.
-The Easel home page is: @EASEL_URL@
+
+.nf
+http://eddylab.org
+.fi
