--- a/miniapps/esl-alimerge.man.in
+++ b/miniapps/esl-alimerge.man.in
@@ -1,4 +1,4 @@
-.TH "esl-alimerge" 1 "@EASEL_DATE@" "Easel @PACKAGE_VERSION@" "Easel miniapps"
+.TH "esl-alimerge" 1 "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
 
 .SH NAME
 .TP 
@@ -154,26 +154,22 @@ Specify that the input alignments are DNA alignments.
 Specify that the input alignments are protein alignments.
 
 
+
+.SH SEE ALSO
+
+.nf
+@EASEL_URL@
+.fi
+
+.SH COPYRIGHT
+
+.nf 
+@EASEL_COPYRIGHT@
+@EASEL_LICENSE@
+.fi 
+
 .SH AUTHOR
 
-Easel and its documentation are @EASEL_COPYRIGHT@.
-@EASEL_LICENSE@.
-See COPYING in the source code distribution for more details.
-The Easel home page is: @EASEL_URL@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.nf
+http://eddylab.org
+.fi
