--- a/miniapps/esl-seqrange.man.in
+++ b/miniapps/esl-seqrange.man.in
@@ -1,4 +1,4 @@
-.TH "esl-seqrange" 1 "@RELEASEDATE@" "@PACKAGE@ @RELEASE@" "@PACKAGE@ Manual"
+.TH "esl-seqrange" 1 "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
 
 .SH NAME
 .TP
@@ -59,9 +59,22 @@ where
 may be FASTA, GenBank, EMBL, UniProt, or DDBJ.  This string
 is case-insensitive ("genbank" or "GenBank" both work, for example).
 
+.SH SEE ALSO
+
+.nf
+@EASEL_URL@
+.fi
+
+.SH COPYRIGHT
+
+.nf 
+@EASEL_COPYRIGHT@
+@EASEL_LICENSE@
+.fi 
+
 .SH AUTHOR
 
-Easel and its documentation are @EASEL_COPYRIGHT@.
-@EASEL_LICENSE@.
-See COPYING in the source code distribution for more details.
-The Easel home page is: @EASEL_URL@
+.nf
+http://eddylab.org
+.fi
+
