--- a/miniapps/esl-mask.man.in
+++ b/miniapps/esl-mask.man.in
@@ -1,40 +1,41 @@
-.TH "esl-mask" 1 "@EASEL_DATE@" "Easel @EASELVERSION@" "Easel Manual"
+.TH "esl\-mask" 1 "@EASEL_DATE@" "Easel @EASELVERSION@" "Easel Manual"
 
 .SH NAME
-.TP 
-esl-mask - mask sequence residues with X's (or other characters)
+esl\-mask \- mask sequence residues with X's (or other characters)
 
 .SH SYNOPSIS
-.B esl-mask
-.I [options]
+.B esl\-mask
+[\fIoptions\fR]
 .I seqfile
 .I maskfile
 
 
 .SH DESCRIPTION
 
-.B esl-mask
+.PP
+.B esl\-mask
 reads lines from 
 .I maskfile 
 that give start/end coordinates for
 regions in each sequence in 
-.I seqfile,
+.IR seqfile ,
 masks these residues (changes
 them to X's), and outputs the masked sequence.
 
+.PP
 The
 .I maskfile
 is a space-delimited file. Blank lines and lines that start with '#'
 (comments) are ignored. Each data line contains at least three
 fields:
-.I seqname,
-.I start,
+.IR seqname ,
+.IR start ,
 and
-.I end. 
+.IR end . 
 The 
 .I seqname 
 is the name of a sequence in the 
-.I seqfile,
+.IR seqfile ,
 and 
 .I start
 and 
@@ -43,110 +44,122 @@ are coordinates defining a region in that sequence.
 The coordinates are indexed <1..L> with respect to a
 sequence of length <L>.
 
+.PP
 By default, the sequence names must appear in exactly the same order
 and number as the sequences in the
-.I seqfile. 
+.IR seqfile.  
 This is easy to enforce, because the format of
 .I maskfile 
 is also legal as a list of names for 
-.B esl-sfetch, 
+.BR esl\-sfetch , 
 so you can always fetch a temporary sequence file with 
-.B esl-sfetch 
+.B esl\-sfetch 
 and pipe that to 
-.B esl-mask.
+.BR esl\-mask .
 (Alternatively, see the 
-.B -R
+.B \-R
 option for fetching from an SSI-indexed
-.I seqfile.)
+.IR seqfile .)
 
+.PP
 The default is to mask the region indicated by 
-.I <start>..<end>.
+\fI<start>\fR..\fI<end>\fR.
 Alternatively, everything but this region can be masked;
 see the
-.B -r
+.B \-r
 reverse masking option.
 
+.PP
 The default is to mask residues by converting them to X's.
 Any other masking character can be chosen (see
-.B -m
-option),
-or alternatively, masked residues can be lowercased (see
-.B -l
+.B \-m
+option), or alternatively, masked residues can be lowercased (see
+.B \-l
 option).
-
-The
-.I seqfile
-can be in any sequence file format that Easel reads, such as FASTA
-format. The format will be autodetected. Alternatively, for increased reliability,
-you can specify the input format; see the
-.B --informat
-option.
 
 
 
 .SH OPTIONS
 
 .TP
-.B -h
+.B \-h
 Print brief help; includes version number and summary of
 all options, including expert options.
 
 .TP
-.B -l
+.B \-l
 Lowercase; mask by converting masked characters to lower case and
 unmasked characters to upper case.
 
 .TP
-.BI -m " <c>"
+.BI \-m " <c>"
 Mask by converting masked residues to 
 .I <c>
 instead of the default X.
 
 .TP
-.BI -o  " <f>"
+.BI \-o  " <f>"
 Send output to file
 .I <f>
 instead of stdout.
 
 .TP
-.B -r
+.B \-r
 Reverse mask; mask everything outside the region
 .I start..end, 
 as opposed to the default of masking that region.
 
 .TP
-.B -R
+.B \-R
 Random access; 
 fetch sequences from 
-.I <seqfile>
+.I seqfile
 rather than requiring that sequence names in
-.I <maskfile>
+.I maskfile
 and
-.I <seqfile>
+.I seqfile
 come in exactly the same order and number.  The
-.I <seqfile> must be SSI indexed (see
-.B esl-sfetch --index.)
+.I seqfile
+must be SSI indexed (see \fBesl\-sfetch \-\-index\fR.)
 
 .TP
-.BI -x " <n>"
+.BI \-x " <n>"
 Extend all masked regions by up to <n> residues on each side. 
 For normal masking, this means masking
-.I <start>-<n>..<end>+<n>. 
+\fI<start>\fR\-\fI<n>\fR..\fI<end>\fR+\fI<n>\fR. 
 For reverse masking, this means masking
-.I 1..<start>-1+<n>
+1..\fI<start>\fR\-1+\fI<n>\fR
 and
-.I <end>+1-<n>..L
-in a srquence of length L.
+\fI<end>\fR+1\-\fI<n>\fR..L
+in a sequence of length L.
 
 
 .TP
-.BI --informat " <s>"
-Specify that the sequence file is in format 
-.I <s>,
-rather than allowing the program to autodetect
-the file format. 
-
-
+.BI \-\-informat " <s>"
+Assert that input
+.I seqfile
+is in format
+.IR <s> ,
+bypassing format autodetection.
+Common choices for 
+.I <s> 
+include:
+.BR fasta ,
+.BR embl ,
+.BR genbank.
+Alignment formats also work;
+common choices include:
+.BR stockholm , 
+.BR a2m ,
+.BR afa ,
+.BR psiblast ,
+.BR clustal ,
+.BR phylip .
+For more information, and for codes for some less common formats,
+see main documentation.
+The string
+.I <s>
+is case-insensitive (\fBfasta\fR or \fBFASTA\fR both work).
 
 
 
