--- a/miniapps/esl-seqstat.man.in
+++ b/miniapps/esl-seqstat.man.in
@@ -1,76 +1,47 @@
-.TH "esl-seqstat" 1  "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
+.TH "esl\-seqstat" 1  "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
 
 .SH NAME
-.TP
-esl-seqstat - summarize contents of a sequence file
+esl\-seqstat \- summarize contents of a sequence file
 
 .SH SYNOPSIS
-
-.B esl-seqstat
-.I [options]
+.B esl\-seqstat
+[\fIoptions\fR]
 .I seqfile
 
 .SH DESCRIPTION
 
-.pp
-.B esl-seqstat 
+.PP
+.B esl\-seqstat 
 summarizes the contents of the
-.I seqfile.
+.IR seqfile .
 It prints the format, alphabet type, number of sequences, total number
 of residues, and the mean, smallest, and largest sequence length.
 
-.pp
+.PP
 If 
 .I seqfile
-is - (a single dash),
-sequence input is read from
-.I stdin.
+is \- (a single dash),
+sequence input is read from stdin.
 
-.pp
-The sequence file may be in any of several different common unaligned
-sequence formats including FASTA, GenBank, EMBL, UniProt, or DDBJ. It
-may also be an alignment file, in Stockholm format for example. By
-default the file format is autodetected. The 
-.I --informat <s> 
-option allows you to specify the format and override
-autodetection. This
-option may be useful for making 
-.B esl-seqstat 
-more robust, because format autodetection may fail on unusual files.
-
-.pp
-The sequences can be of protein or DNA/RNA sequences. All sequences
-in the same 
-.I seqfile
-must be either protein or DNA/RNA. The alphabet will be autodetected
-unless one of the options 
-.I --amino,
-.I --dna,
-or 
-.I --rna 
-are given. These options may be useful in automated
-pipelines to make 
-.B esl-alistat 
-more robust; alphabet autodetection is not infallible.
 
 
 
 .SH OPTIONS
 
 .TP
-.B -h 
+.B \-h 
 Print brief help;  includes version number and summary of
 all options, including expert options.
 
 .TP
-.B -a
+.B \-a
 Additionally show a summary statistic line showing the name, length,
 and description of each individual sequence. Each of these lines is
 prefixed by an = character, in order to allow these lines to be easily
 grepped out of the output.
 
 .TP
-.B -c
+.B \-c
 Additionally print the residue composition of the sequence file.
 
 
@@ -78,28 +49,47 @@ Additionally print the residue composition of the sequence file.
 .SH EXPERT OPTIONS
 
 .TP
-.BI --informat " <s>"
-Specify that the sequence file is in format
-.I <s>,
-where 
+.BI \-\-informat " <s>"
+Assert that input
+.I seqfile
+is in format
+.IR <s> ,
+bypassing format autodetection.
+Common choices for 
 .I <s> 
-may be FASTA, GenBank, EMBL, UniProt, DDBJ, or Stockholm.  This string
-is case-insensitive ("genbank" or "GenBank" both work, for example).
+include:
+.BR fasta ,
+.BR embl ,
+.BR genbank.
+Alignment formats also work;
+common choices include:
+.BR stockholm , 
+.BR a2m ,
+.BR afa ,
+.BR psiblast ,
+.BR clustal ,
+.BR phylip .
+For more information, and for codes for some less common formats,
+see main documentation.
+The string
+.I <s>
+is case-insensitive (\fBfasta\fR or \fBFASTA\fR both work).
+
 
 .TP
-.B --amino
+.B \-\-amino
 Assert that the 
 .I seqfile 
 contains protein sequences. 
 
 .TP 
-.B --dna
+.B \-\-dna
 Assert that the 
 .I seqfile 
 contains DNA sequences. 
 
 .TP 
-.B --rna
+.B \-\-rna
 Assert that the 
 .I seqfile 
 contains RNA sequences. 
