--- a/miniapps/esl-weight.man.in
+++ b/miniapps/esl-weight.man.in
@@ -1,103 +1,86 @@
-.TH "esl-weight" 1  "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
+.TH "esl\-weight" 1  "@EASEL_DATE@" "Easel @EASEL_VERSION@" "Easel Manual"
 
 .SH NAME
-.TP
-esl-weight - calculate sequence weights in MSA(s)
+esl\-weight \- calculate sequence weights in MSA(s)
 
 .SH SYNOPSIS
-
-.B esl-weight
-.I [options]
+.B esl\-weight
+[\fIoptions\fR]
 .I msafile
 
 .SH DESCRIPTION
 
-.pp
-.B esl-weight
+.PP
+.B esl\-weight
 calculates individual sequence weights for each alignment in 
-.I msafile,
+.I msafile 
 and outputs a new 
 multiple sequence alignment file in Stockholm format with
 the weights annotated in Stockholm-format 
-.I #=GS <seqname> WT <weight>
+\fB#=GS \fIseqname\fB WT \fIweight\fR
 lines.
 The default weighting algorithm is the Gerstein/Sonnhammer/Chothia
 algorithm.
 
-.pp
+.PP
 If 
 .I msafile
-is - (a single dash),
-MSA input is read from
-.I stdin.
+is \- (a single dash),
+MSA input is read from stdin.
 
-
-
-.pp
-The sequences can be of protein or DNA/RNA sequences. All sequences
-in the same 
-.I seqfile
-must be either protein or DNA/RNA. The alphabet will be autodetected
-unless one of the options 
-.I --amino,
-.I --dna,
-or 
-.I --rna 
-are given. These options may be useful in automated
-pipelines to make 
-.B esl-weight
-more robust; alphabet autodetection is not infallible.
 
 
 
 .SH OPTIONS
 
 .TP
-.B -h 
+.B \-h 
 Print brief help;  includes version number and summary of
 all options, including expert options.
 
 .TP
-.B -g
+.B \-g
 Use the Gerstein/Sonnhammer/Chothia weighting algorithm; this is the
 default.
 
 .TP
-.B -p
-Use the Henikoff position-based weighting algorithm.
+.B \-p
+Use the Henikoff position-based weighting algorithm. This is faster
+and more memory efficient than the default.
 
 .TP
-.B -b
+.B \-b
 "BLOSUM weights": use approximately the same rule used in constructing
 the BLOSUM score matrices. This involves single-linkage clustering at
 some fractional identity threshold (default 0.62; see 
-.I --id 
+.B \-\-id 
 option), then for each cluster, splitting a total weight of one
 uniformly amongst all sequences in the cluster.
+
 
 .SH EXPERT OPTIONS
 
 .TP 
-.BI --id " <x>"
+.BI \-\-id " <x>"
 Sets the fractional identity threshold used by the BLOSUM weighting
 rule (option 
-.I -b
-; required), to a number 0<=x<=1. Default is 0.62.
+.BR \-b ;
+required), to a number 0<=x<=1. Default is 0.62.
 
 .TP
-.B --amino
+.B \-\-amino
 Assert that the 
 .I msafile 
 contains protein sequences. 
 
 .TP 
-.B --dna
+.B \-\-dna
 Assert that the 
 .I msafile 
 contains DNA sequences. 
 
 .TP 
-.B --rna
+.B \-\-rna
 Assert that the 
 .I msafile 
 contains RNA sequences. 
